fix alignment

--- a/packages/nys-table/src/nys-table.scss
+++ b/packages/nys-table/src/nys-table.scss
@@ -77,6 +77,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     padding: var(--_nys-table-padding--cell--y) var(--_nys-table-padding--cell--x);
+    text-align: left;
 
     &:has(nys-button) {
       padding: 0;
